--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background: rgb(191, 198, 192);
+    gap: 100px;
 }
-.board {
+.chess {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
