--- a/src/Components/Move/index.css
+++ b/src/Components/Move/index.css
@@ -6,12 +6,11 @@
     flex-direction: row;
     justify-content: center;
     gap: 140px;
-    font-size: 25px;
+    font-size: 28px;
     font-weight: 700;
     position: fixed;
-    background: black;
     height: 50px;
-    width: 370px;
+    width: 410px;
 }
 .player {
     display: flex;
@@ -27,10 +26,17 @@
 }
 .move {
     display: flex;
-    gap: 10px;
+    gap: 30px;
 }
 .showMove{
-    background: black;
+    position: absolute;
+    top:0%;
+    left: 0%;
+    background: rgba(255, 255, 255, 0.23);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.8px);
+    -webkit-backdrop-filter: blur(8.8px);
+    border: 1px solid rgba(255, 255, 255, 0.44);
     height: 100vh;
     width: 470px;
 }
@@ -46,18 +52,18 @@
     margin-left: 10px;
     font-size: 20px;
     margin-top: 20px;
-    color: gray;
+    color: rgb(45, 52, 45);
     width: 40px;
 }
-.notation {
-    margin-top: 35px;
+.gap {
+    height: 50px;
 }
 .move_gap {
     display: flex;
     gap: 120px;
 }
 .moves_container {
-    height: 74vh;
+    height: 68.5vh;
     overflow-y: scroll;
 }
 .player1, .player2 {
@@ -75,8 +81,13 @@
     width: 10px;
 } 
 ::-webkit-scrollbar-track {
-    background: rgb(135, 126, 126);
+    background: rgb(52, 53, 51);
 }
 ::-webkit-scrollbar-thumb {
     background: #fef4f4; 
+}
+@media (max-width : 600px) {
+    .showMove {
+        display: none;
+    }
 }
