--- a/src/Components/Hamburger/index.css
+++ b/src/Components/Hamburger/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   background: #232323;
-  color: #cdcdcd;
   font-family: "Avenir Next", "Avenir", sans-serif;
 }
 
@@ -57,8 +56,8 @@ body {
 
   cursor: pointer;
 
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  opacity: 0; 
+  z-index: 2; 
 
   -webkit-touch-callout: none;
 }
