--- a/src/Pages/LoginPage/index.css
+++ b/src/Pages/LoginPage/index.css
@@ -6,19 +6,26 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    color: #cdcdcd;
+}
+.Login h1 {
+    font-size: 35px;
 }
 .Login input {
-    width: 320px;
-    height: 30px;
+    width: 360px;
+    height: 40px;
     border-radius: 5px;
     border: 1px solid #ccc;
     outline: none;
     padding: 0 10px;
+    font-family: sans-serif;
+    font-size: 17px;
 }
 .user {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    color: #cdcdcd;
 }
 .JoinRoom {
     display: flex;
@@ -27,28 +34,30 @@
     gap: 10px;
 }
 .JoinRoom input {
-    width: 230px;
-    height: 30px;
+    width: 250px;
+    height: 40px;
     border-radius: 5px;
     border: 1px solid #ccc;
     outline: none;
     padding: 0 10px;
 }
 .JoinRoom button {
-    width: 80px;
-    height: 30px;
+    width: 100px;
+    height: 40px;
     border-radius: 5px;
+    font-size: 17px;
     border: 1px solid #ccc;
-    outline: none;
     background-color: #fff;
     cursor: pointer;
+    font-family: sans-serif;
 }
 .search {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-left: 12px;
+    margin-left: 3px;
+    color: #cdcdcd;
 }
 .search img {
     width: 30px;
