--- a/src/Components/Move/index.css
+++ b/src/Components/Move/index.css
@@ -1,6 +1,37 @@
 .player1, .player2,.moves_container {
     color: white;
 }
+.notation {
+    display: flex;
+    flex-wrap: wrap;
+}
+.time, .time1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: #cdcdcd;
+}
+.colon {
+    margin-bottom: 9px;
+}
+.time, .time1 {
+    font-weight: 700;
+    font-size: 50px;
+}
+.rating1, .rating2 {
+    font-size: 20px;
+    font-weight: 700;
+}
+.name1, .name2 {
+    font-size: 30px;
+    font-weight: 700;
+}
+.nameTag {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
 .turn {
     display: flex;
     flex-direction: row;
@@ -18,9 +49,6 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.player1, .player2 {
-    margin-left: 10px;
-}
 .cont {
     display: flex;
     flex-direction: column;
@@ -28,6 +56,7 @@
 .move {
     display: flex;
     gap: 30px;
+    width: 50%;
 }
 .showMove{
     position: absolute;
@@ -71,12 +100,15 @@
     height: 13vh;
     display: flex;
     align-items: center;
+    margin-left: 10px;
+    display: flex;
+    gap: 20px;
 }
 .profile1, .profile2 {
     width: 10vh;
     height: 10vh;
+    object-fit: cover;
     border-radius: 100px;
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 100%, rgba(255,255,255,0) 100%);
 }
 ::-webkit-scrollbar {
     width: 10px;
