--- a/src/Pages/LoginPage/index.css
+++ b/src/Pages/LoginPage/index.css
@@ -21,6 +21,11 @@
     font-family: sans-serif;
     font-size: 17px;
 }
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 .user {
     display: flex;
     flex-direction: column;
@@ -41,7 +46,7 @@
     outline: none;
     padding: 0 10px;
 }
-.JoinRoom button {
+#button {
     width: 100px;
     height: 40px;
     border-radius: 5px;
@@ -56,7 +61,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-left: 3px;
+    margin-left: -3px;
     color: #cdcdcd;
     visibility: hidden;
 }
@@ -65,6 +70,6 @@
     height: 30px;
 }
 
-button:disabled {
+#button:disabled {
     cursor: not-allowed;
 }
