--- a/src/Components/Hamburger/index.css
+++ b/src/Components/Hamburger/index.css
@@ -136,3 +136,10 @@ body {
   right: 5%;
   cursor: pointer;
 }
+
+@media (max-width: 700px) {
+  .LightMode, .NightMode {
+    right: 20%;
+    z-index: 1000;
+  }
+}
