--- a/src/Pages/LoginPage/index.css
+++ b/src/Pages/LoginPage/index.css
@@ -100,6 +100,15 @@ form {
     height: 100vh;
     width: 100vw;
 }
+.errmessage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    gap: 10px;
+    margin-left: -3px;
+    color: #cdcdcd;
+}
 
 @media screen and (max-width: 700px) {
     .side1 {
