now you see this

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,6 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
-/* do shadcn initialization using below import and then switch to above one */
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 @layer base {
   :root {
