feat: match making ..

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply dark:bg-gradient-to-br dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 bg-background text-foreground;
   }
 }
 
